# panduza-rust-platform

./: .gitignore  Cargo.toml  README.md  build.rs  rumqttd.toml  run.sh  run_with_builtin.sh
.github/: regression-testing.yml
.github/workflows/: build-binaries.yml  build_binaries.yml  regression-testing.yml  rust.yml  test-tag.yml
lib/connector/: Cargo.toml  mod.rs
lib/connectors/: Cargo.toml
lib/connectors/src/: lib.rs  logger.rs  serial.rs  usb.rs
lib/connectors/src/loggers/: connector.rs  gate.rs  mod.rs
lib/connectors/src/serial/: generic.rs  mod.rs  settings.rs  slip.rs  time_lock.rs  tty.rs  tty2.rs  tty3.rs
lib/connectors/src/serial/generic/: connector.rs  driver.rs  gate.rs  mod.rs
lib/connectors/src/serial/slip/: connector.rs  driver.rs  gate.rs  mod.rs
lib/connectors/src/usb/: mod.rs  settings.rs  usb.rs  usbtmc.rs
lib/connectors/src/usb/usb2/: driver.rs  gate.rs  mod.rs
lib/core/: Cargo.toml
lib/core/src/: attribute.rs  codec.rs  device.rs  error.rs  factory.rs  info.rs  interface.rs  lib.rs  logger.rs  platform.rs  pmacro.rs  reactor.rs  task_channel.rs  taskpool.rs  traits.rs
lib/core/src/__attribute/: a1.rs  info.rs  json.rs
lib/core/src/__connection/: logger.rs  manager.rs  task.rs
lib/core/src/__device/: manager.rs
lib/core/src/__interface/: basic.rs  listener.rs  mod.rs  subscriber.rs
lib/core/src/__link/: connection_handle.rs  interface_handle.rs
lib/core/src/__meta/: blc.rs  mod.rs  powermeter.rs  relay.rs  thermometer.rs
lib/core/src/__meta/digital_input/: mod.rs  states.rs
lib/core/src/__meta/registers/: interface.rs  settings.rs
lib/core/src/__platform/connection_info/: error.rs
lib/core/src/__platform/services/: mod.rs
lib/core/src/__platform/services/boot/: mod.rs
lib/core/src/attribute/: a1.rs  a3.rs  att_only_msg_att.rs  att_only_msg_inner.rs  bidir_msg_att.rs  bidir_msg_inner.rs  bool.rs  builder.rs  cmd_only_msg_att.rs  cmd_only_msg_att_inner.rs  info.rs  json.rs  mod.rs  raw.rs  ro_msg_att.rs  ro_msg_inner.rs  rw_msg_att.rs  rw_msg_inner.rs  wo_msg_att.rs  wo_msg_inner.rs
lib/core/src/codec/: boolean.rs  json.rs  memory_command.rs  number.rs  numeric.rs  string.rs  string_list.rs  u64.rs  uinterger.rs
lib/core/src/connection/: manager.rs  task.rs
lib/core/src/device/: device.rs  factory.rs  inner.rs  logger.rs  manager.rs  mod.rs  monitor.rs  runner.rs  traits.rs
lib/core/src/device/root/: device.rs  producer.rs
lib/core/src/factory/: production_order.rs
lib/core/src/info/: devices.rs  pack.rs
lib/core/src/info/devices/: structure.rs
lib/core/src/info/devices/structure/: element.rs
lib/core/src/info/devices/structure/element/: attribute.rs  interface.rs
lib/core/src/interface/: builder.rs  fsm.rs  fsm_task.rs  interface.rs  listener.rs  listener_task.rs  logger.rs  mod.rs  runner.rs  starter.rs
lib/core/src/meta/: ammeter.rs  blc.rs  bpc.rs  mod.rs  powermeter.rs  registers.rs  relay.rs  serial.rs  thermometer.rs  video.rs  voltmeter.rs
lib/core/src/meta/digital_input/: interface.rs  states.rs  subscriber.rs
lib/core/src/meta/registers/: interface.rs  mod.rs  settings.rs  states.rs  subscriber.rs
lib/core/src/platform/: config_manager.rs  config_utils.rs  device_tree_manager.rs  inner.rs  local_broker_discovery.rs  mod.rs  spawner.rs  task_pool_loader.rs
lib/core/src/platform/connection_info/: file.rs  serde.rs
lib/core/src/platform/services/: mod.rs
lib/core/src/platform/services/boot/connection_info_loading_process/: mod.rs
lib/core/src/platform/services/hunt/: mod.rs
lib/core/src/reactor/: message_dispatcher.rs  message_engine.rs  settings.rs
lib/core/src/subscription/: mod.rs  request.rs
lib/nokhwa-0.10.4/: .cargo_vcs_info.json
lib/nokhwa-bindings-linux-0.1.0/: Cargo.toml
lib/nokhwa-bindings-macos-0.2.1/: .cargo_vcs_info.json  Cargo.toml
lib/nokhwa-bindings-windows-0.4.0/: .cargo_vcs_info.json  Cargo.toml
plugins/fake/: Cargo.toml
plugins/picoha/: Cargo.toml  build.rs
plugins/picoha/src/: dio.rs  lib.rs
plugins/picoha/src/api/: api_dio.proto
plugins/picoha/src/dio/: api_dio.rs  api_dio_utils.rs  connector.rs  device.rs  itf_digital_input.rs  mod.rs  producer.rs
plugins/std/: Cargo.toml
plugins/std/serial/: Cargo.toml
plugins/std/serial/src/: lib.rs
plugins/std/src/: lib.rs
plugins/std/src/serial_port/: device.rs  itf_serial.rs  mod.rs  producer.rs
plugins/video/: Cargo.toml
plugins/video/lib/nokhwa-bindings-macos-0.2.1/: Cargo.toml
plugins/video/lib/nokhwa-core-0.1.2/: .cargo_vcs_info.json
plugins/video/src/: lib.rs
plugins/video/src/nokhwa-0.10.4/: Cargo.toml
plugins/video/src/nokhwa-bindings-linux-0.1.0/: .cargo_vcs_info.json
plugins/video/src/nokhwa-core-0.1.2/: Cargo.toml
plugins/video/src/nokhwa-core-0.1.2/src/: traits.rs
plugins/video/src/video_no_compression/: device.rs  itf_video.rs  mod.rs  producer.rs  video_meta.rs
src/: built_in.rs  config.rs  connection.rs  device.rs  device_factory.rs  device_tree.rs  interface.rs  interfaces.rs  local_broker_discovery.rs  log.rs  main.rs  platform.rs  plugins_manager.rs  services.rs  subscription.rs  underscore_device.rs
src/attribute/: info.rs  json.rs  mod.rs  raw.rs
src/builtin_devices/: mod.rs
src/connection/: connection.rs  logger.rs  manager.rs  mod.rs  task.rs
src/connector/: mod.rs
src/device/: device.rs  factory.rs  manager.rs  mod.rs  traits.rs
src/interface/: basic.rs  builder.rs  core.rs  fsm.rs  identity.rs  interface.rs  listener.rs  mod.rs  runner.rs  subscriber.rs  traits.rs
src/interfaces/: mod.rs
src/link/: connection_handle.rs  interface_handle.rs  manager.rs  mod.rs
src/log/: formatter_csv.rs  formatter_platform.rs  hash_visitor.rs  log_issue.rs  mod.rs  platform_formatter.rs
src/meta/: blc.rs  bpc.rs  mod.rs  powermeter.rs  relay.rs  thermometer.rs  video.rs
src/platform/: error.rs  local_broker_discovery.rs  mod.rs  services.rs  task_pool_loader.rs
src/subscription/: filter.rs  mod.rs
src/underscore_device/: devices.rs  element.rs  pack.rs  pack_inner.rs  scanner.rs  store.rs  structure.rs  topic.rs
(+97 files in other folders)
