[package]
name = "panduza-rust-platform"
version = "0.1.0"
edition = "2021"


[dependencies]

panduza-core = { path = "lib/core" }
panduza-connectors = { path = "lib/connectors" }


plugins-std-serial = { path = "plugins/std/serial" }


# Main async framework for the platform
tokio = { version = "1", features = ["full", "tracing"] }


# 
dirs = "3.0.2"

# MQTT async client
rumqttc = "0.24.0"


# rumqttd = { git = "https://github.com/bytebeamio/rumqtt", ref = "main" }
rumqttd = { git = "https://github.com/Panduza/rumqtt", branch = "pza_tests" }
config = "0.14.0"

# Async trait support
async-trait = "0.1.77"

# Futures support
futures = "0.3.17"

# Json serialization & deserialization
serde_json = "1.0.114"

# Regex management
regex = "1.10.3"

# Bytes array management
bytes = "1.5.0"

# Bitflags
bitflags = "2.5.0"

# Camera management
# nokhwa = {version = "0.10.4", features = ["input-native", "output-wgpu"]}
nokhwa = {path = "lib/nokhwa-0.10.4", features = ["input-native", "output-wgpu"]}
nokhwa-core = { path = "lib/nokhwa-core-0.1.2" }
# nokhwa-core = {version = "0.1.2"}

# 
hostname = "0.3.1"

chrono = "0.4"


# SHOULD BE REMOVED, ALL THOSE INTERACTION SHOULD BE IN CONNECTORS
tokio-serial = "5.4.1"



# backtrace = "0.3.61"

# To managed logs in colored format
# colored = { version="2.0.0", optional = true }
colored = "2.0.0"

# Trace instrumentation at disabled levels will be skipped and will not even be present
# in the resulting binary unless the verbosity level is specified dynamically.
# This level is configured separately for release and debug builds.
tracing = { version = "0.1", features = [
    # "max_level_off",
    # "max_level_error",
    # "max_level_warn",
    # "max_level_info",
    "max_level_debug",
    # "max_level_trace",
    # "release_max_level_off",
    # "release_max_level_error",
    # "release_max_level_warn",
    "release_max_level_info",
    # "release_max_level_debug",
    # "release_max_level_trace"
]}

# 
tracing-core = { version = "0.1.32" }

# Fmt subscriber
tracing-subscriber = "0.3"

tracing-appender = "0.2.3"

# To see instrumentation through tokio console
console-subscriber = { version="0.2.0", optional = true }

# Video converting h264
# ffmpeg-next = "5.0"

# x264 = "0.3"

[features]

# Enable tracing in stdout
trac-fmt = [ ]
log-issue = [ ]

# Enable tracing in tokio console
trac-console = [ "console-subscriber" ]


