[package]
name = "panduza-rust-platform"
version = "0.4.2"
edition = "2021"


[dependencies]

# Main base code for Panduza platform and plugins
# panduza-platform-core = { git = "https://github.com/Panduza/panduza-platform-core", branch = "main", features = [
#     "log",
# ] }
# panduza-platform-core = { git = "https://github.com/Panduza/panduza-platform-core", tag = "0.1.4", features = [
#     # "serial",
#     "log",
# ] }
# panduza-platform-core = { path = "C:/Users/xavie/workspace/panduza-platform-core" }
panduza-platform-core = { path = "C:/Users/xavie/workspace/panduza-platform-core" }


clap = { version = "4.5.21", features = ["derive"] }


# Main async framework for the platform
tokio = { version = "1.40.0", features = ["full", "tracing"] }

libloading = "0.8"

# 
dirs = "3.0.2"

# MQTT async client
rumqttc = "0.24.0"

# 
rumqttd = { git = "https://github.com/Panduza/rumqtt", tag = "0.0.0" }

config = "0.14.0"

# Async trait support
async-trait = "0.1.77"

# Futures support
futures = "0.3.17"


serde = { "version" = "1.0.0", features = ["derive"] }

# Json serialization & deserialization
serde_json = "1.0.114"

# Regex management
regex = "1.10.3"

# Bytes array management
bytes = "1.5.0"

# Bitflags
bitflags = "2.5.0"

# 
hostname = "0.4.0"

chrono = "0.4"


# backtrace = "0.3.61"

# To managed logs in colored format
# colored = { version="2.0.0", optional = true }
colored = "2.0.0"

# Trace instrumentation at disabled levels will be skipped and will not even be present
# in the resulting binary unless the verbosity level is specified dynamically.
# This level is configured separately for release and debug builds.
tracing = { version = "0.1", features = [
    # "max_level_off",
    # "max_level_error",
    # "max_level_warn",
    # "max_level_info",
    # "max_level_debug",
    "max_level_trace",
    # "release_max_level_off",
    # "release_max_level_error",
    # "release_max_level_warn",
    # "release_max_level_info",
    # "release_max_level_debug",
    "release_max_level_trace",
] }

# 
tracing-core = { version = "0.1.32" }

# Fmt subscriber
tracing-subscriber = "0.3"

tracing-appender = "0.2.3"

# To see instrumentation through tokio console
# console-subscriber = { version="0.2.0", optional = true }

# Used for decimal
rust_decimal = "1.35.0"
rust_decimal_macros = "1.35"


# --- BUILT-IN DRIVERS
# crate-type = ["lib"] => because plugins need to be compile as simple lib when built-in
# ---
# Korad devices
pza-plugin-korad = { git = "https://github.com/Panduza/pza-plugin-korad", tag = "1.0.3", features = [
    "log",
], optional = true }
# ---
# Hameg devices
pza-plugin-hameg = { git = "https://github.com/Panduza/pza-plugin-hameg", tag = "1.0.2", features = [
    "log",
], optional = true }


[build-dependencies]
toml = "0.8.19"

# --- FEATURES
[features]


# Enable tracing in tokio console
# trac-console = [ "console-subscriber" ]


# ---
# Integrate some generic drivers directly into the platform
# 
built-in-drivers = ["pza-plugin-korad", "pza-plugin-hameg"]
