[package]
name = "panduza-platform-core"
edition = "2021"
version = "0.1.0"


[dependencies]


# Main async framework for the platform
tokio = { version = "1", features = ["full", "tracing"] }


# 
dirs = "3.0.2"

# MQTT async client
rumqttc = "0.24.0"

# Async trait support
async-trait = "0.1.77"

# Futures support
futures = "0.3.17"

# Json serialization & deserialization
serde_json = "1.0.114"

# Regex management
regex = "1.10.3"

# Bytes array management
bytes = "1.5.0"

# Bitflags
bitflags = "2.5.0"

# 
hostname = "0.3.1"

chrono = "0.4"


thiserror = "1.0.0"


serde = { version = "1.0", features = ["derive"] }


# Trace instrumentation at disabled levels will be skipped and will not even be present
# in the resulting binary unless the verbosity level is specified dynamically.
# This level is configured separately for release and debug builds.
tracing = { version = "0.1", features = [
    # "max_level_off",
    # "max_level_error",
    # "max_level_warn",
    # "max_level_info",
    "max_level_debug",
    # "max_level_trace",
    # "release_max_level_off",
    # "release_max_level_error",
    # "release_max_level_warn",
    "release_max_level_info",
    # "release_max_level_debug",
    # "release_max_level_trace"
] }
