[package]
name = "pza-plugin-picoha"
edition = "2021"

[dependencies]

# The panduza core library
panduza-platform-core = { git = "https://github.com/Panduza/panduza-platform-core", branch = "main" }
# The panduza connectors library
panduza-platform-connectors = { git = "https://github.com/Panduza/panduza-platform-connectors", branch = "main" }
# Main async framework for the platform
tokio = { version = "1", features = ["full", "tracing"] }
# Json serialization & deserialization
serde_json = "1.0.114"
# Async trait support
async-trait = "0.1.77"
# Futures support
futures = "0.3.17"


prost = "0.13.1"
# Only necessary if using Protobuf well-known types:
prost-types = "0.13.1"

bytes = "1.0.1"

[build-dependencies]
prost-build = { version = "0.13.1" }
